# db2repo

./: .gitignore  .mise.toml  Project-spec.md  Project-stories.md  README.md  pyproject.toml  sample_ddl_setup.sql  test_ddl_extraction.py
db2repo/: __init__.py  cli.py  config.py  exceptions.py
db2repo/adapters/: __init__.py  base.py  snowflake.py
db2repo/git/: __init__.py  manager.py
db2repo/utils/: __init__.py  ddl_formatter.py  file_organization.py  validators.py
tests/: __init__.py  test_adapters.py  test_cli.py  test_cli_profiles.py  test_config.py  test_file_organization.py  test_git_manager.py  test_validators.py
